# my-code-kata

./: DownloadMp3.ps1  README.md  ReflectionUtility.cs  advent_of_code.rb  ai-research.js  angular-tic-tac-toe.js  array-jump.cs  college_major_analysis.rds  decode_secret_message.py  find-property-value.cs  ip-address-lookup.php  linguistics.js  moving-average.py  property-query.js  secret_message.html  test-attributes.cs
AdventOfCode/: day2.rb  day3.rb  day4.rb
AgenticAI/CareerChat/: .env  IMPLEMENTATION_ANALYSIS.md  README.md  app.py  main.py  pyproject.toml  resume.txt
AgenticAI/CareerChat/agent-app/: app.py  requirements.txt
AgenticAI/CareerChat/app/: app.py  requirements.txt  resume.txt
AgenticAI/CareerChat/openai-app/: README.md  pyproject.toml  resume.txt
BioInformatics/: ApproximatePatternCount.py  ApproximatePatternMatching.py  BetterClumpFinding.py  ClumpFinding.py  DistanceBetweenPatternAndStrings.py  Entropy.py  FindingFrequentWordsBySorting.py  FrequencyArray.py  FrequentWords.py  GibbsSampler.py  GreedyMotifSearch.py  HammingDistance.py  Helpers.py  IncrementPattern.py  MedianString.py  MinimumSkew.py  MostProbable.py  MotifEnumeration.py  Skew.py  (+11 more)
CrewAI/financial_advisor/: .gitignore  README.md  pyproject.toml
CrewAI/financial_advisor/output/: financial_report.md
CrewAI/financial_advisor/src/financial_advisor/: crew.py  main.py
CrewAI/financial_advisor/src/financial_advisor/config/: agents.yaml  tasks.yaml
CrewAI/financial_advisor/src/financial_advisor/models/: securities.py
CrewAI/financialadvisor/: .gitignore  README.md  pyproject.toml
CrewAI/financialadvisor/src/financialadvisor/: crew.py  main.py
CrewAI/financialadvisor/src/financialadvisor/config/: agents.yaml  tasks.yaml
(+63 files in other folders)
