[project]
name = "financial_advisor"
version = "0.1.0"
description = "Financial Advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.71.0",
    "crewai[tools]>=0.177.0,<1.0.0",
]

[project.scripts]
financial_advisor = "financial_advisor.main:run"
run_crew = "financial_advisor.main:run"
train = "financial_advisor.main:train"
replay = "financial_advisor.main:replay"
test = "financial_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
