[project]
name = "financialadvisor"
version = "0.1.0"
description = "FinancialAdvisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
financialadvisor = "financialadvisor.main:run"
run_crew = "financialadvisor.main:run"
train = "financialadvisor.main:train"
replay = "financialadvisor.main:replay"
test = "financialadvisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
